# democracy-exe

./: .cursorignore  .cursorrules  .dockerignore  .gitignore  .opencommitignore  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.debugging  Justfile  LICENSE  Makefile  PLAN.md  ProjectStatus.md  QUICKSTART.md  README.md  codecov.yaml  cursorrules.xml  diff_to_xml.sh  director.py  generate_config.yaml  generate_prompt.md  generate_prompt.py  install_taplo.sh  langgraph.json  logic-to-merge.md  mkdocs.yml  process_diffs.sh  pyproject.toml  sweep.yaml  thread.conf  update_requirements.sh
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/: labeler.yml  labels.yml  renovate.json5
.github/workflows/: main.yml
ai_docs/: dptest.xml  dpytest_minimal_test_examples.xml  dpytest_rules.md  dpytest_rules.xml  gallery_dl_tests.xml  koalabot_advanced.xml  koalabot_cog_testing.xml  koalabot_simple.xml  loguru_logger.xml  marimo_cheatsheet.md  marimo_documentation.json  monorepo_langgraph_implementation.xml  movienightbot.xml  pytest_aiohttp_testing.xml  quick.xml  sandbox_agent_testing.xml  uv_docker.xml  uv_docker_example_repo.xml  vcrpy_docs.xml
ai_docs/benchy/: anthropic-tool-use.md  openai-function-calling.md  pricing-and-json-responses.md  tool-use-best-practices.md
ai_docs/cerebro_bot/: autoresize_cog.xml  cerebro.xml
ai_docs/fastapi/: fastapi_dependencies.xml  fastapi_pytest_expert.md  fastapi_query_params.xml  fastapi_requests.xml  fastapi_responses.xml  fastapi_test_examples.xml
ai_docs/prompts/: KoalaBot_docs_test_and_code.xml  TeachersPetBot_docs_test_and_code.xml  audit_code_prompt.xml  democracy_exe_logsetup.xml  docker_image_optimizer.txt  dockerfile_improver.md  dpytest_docs_test_and_code.xml  dpytest_expert.md  gallery_model.txt  improve_structlog_tests.md  prompt_langsmith_loguru_multiprocessing_segmentation_fault.md  structlog_docs.xml  structlog_expert.md  twitter_scraper.md
ai_docs/requests_mock/: requests_mock.xml
ai_docs/respx/: respx.xml
ai_docs/structlog/: proper_structlog_testing.xml
ai_docs/trantor/: trantor_readme.md
aider_configs/: CONVENTIONS.md  NEW_PROMPT.md  aider_rules
cookbook/: research-assistant.ipynb
cookbook/studio/: Dockerfile  map_reduce.py  parallelization.py  requirements.txt  research_assistant.py  sub_graphs.py
democracy_exe/: __init__.py  __main__.py  aio_settings.py  asynctyper.py  asynctyper_testing.py  base.py  cli.py  constants.py  debugger.py  foo.py  llm_manager.py  main.py  requirements.txt  types.py
democracy_exe/agentic/: __init__.py  _schemas.py  _utils.py  event_server.py  graph.py
democracy_exe/ai/: base.py  state.py
democracy_exe/bot_logger/: __init__.py  logsetup.py
democracy_exe/chatbot/: discord_bot.py  terminal_bot.py  textual_bot.py
democracy_exe/clients/: __init__.py  aio_gallery_dl.py  tweetpik.py
democracy_exe/exceptions/: __init__.py
democracy_exe/factories/: __init__.py  cmd_factory.py  guild_factory.py  singleton.py
democracy_exe/services/: base_service.py  twitter_service.py
democracy_exe/shell/: __init__.py
democracy_exe/subcommands/: ai_docs_cmd.py  dummy_cmd.py
democracy_exe/utils/: __init__.py  _testing.py  aiodbx.py  aiotweetpik.py  async_.py  base.py  base_context.py  bot_context.py  chat_formatting.py  collections_io.py  context.py  dropbox_.py  duration_str.py  events.py  file_functions.py  file_operations.py  files_import.py  globalfunctions.py  imgops.py  imitools.py  introspect.py  io.py  misc.py  naming.py  run_service.py  shell.py  temporary_file.py  timer.py  vidops.py  writer.py
docs/: design-considerations.md  index.md  modules.md
docs/prompts.d/: refactor_rules.md
documentation/: Makefile  conf.py  contributing.md  index.md
documentation/_templates/: base.html
hack/jsonschema/: langgraph_schema.json  pyproject.json
notebooks/: interactive_demo.py
scripts/: add_lint_comments.py  blame.py  compare-diffs.sh  createstubs.sh  custom_style.json  expert_def_generator.py  generate_for_claude_folder.sh  generate_langsmith_dataset_climate_change.py  jekyll_run.sh  neatify.py  pyright_createstub_missing.sh  q_a.json  run_monkeytype  stitch.py  tdd.sh  unittest-local  video_splitter.py
specs/: director_create_ai_docs_typer_subcommand.yaml  director_green_output_format.yaml  director_new_typer_subcommand.example.yaml  director_slider_output_format_two_charts.yaml  director_template.example.yaml  director_version_bump.yaml  spec_feature_new_slider_html_output_and_charts.md  spec_template.example.md
tests/: conftest.py  fake_embeddings.py  test_aio_gallery_dl.py  test_aio_settings.py  test_async_typer.py  test_cli.py  test_discord_bot.py  test_foo.py  test_logsetup.py  test_shell.py
tests/cogs/: test_twitter_cog.py
tests/internal/: discord_test_utils.py
tests/tests_utils/: __init__.py  last_ctx_cog.py  utils.py
tests/unittests/: test_attachment_handler.py  test_bot.py  test_message_handler.py  test_monitoring.py  test_terminal_bot.py
typings/aider/: __init__.pyi  analytics.pyi  args.pyi  args_formatter.pyi  commands.pyi  copypaste.pyi  diffs.pyi  dump.pyi  editor.pyi  exceptions.pyi  format_settings.pyi  gui.pyi  help.pyi  help_pats.pyi  history.pyi  io.pyi  linter.pyi  llm.pyi  main.pyi  mdstream.pyi  models.pyi  prompts.pyi  repo.pyi  repomap.pyi  report.pyi  run_cmd.pyi  scrape.pyi  sendchat.pyi  special.pyi  urls.pyi  utils.pyi  versioncheck.pyi  voice.pyi  watch.pyi  watch_prompts.pyi
typings/aiofiles/: __init__.pyi  base.pyi  os.pyi  ospath.pyi
typings/better_exceptions/: __init__.pyi  formatter.pyi
typings/discord/: __init__.pyi  __main__.pyi  _types.pyi  abc.pyi  activity.pyi  appinfo.pyi  asset.pyi  audit_logs.pyi  automod.pyi  backoff.pyi  channel.pyi  client.pyi  colour.pyi  components.pyi  context_managers.pyi  embeds.pyi  emoji.pyi  enums.pyi  errors.pyi  file.pyi  flags.pyi  gateway.pyi  guild.pyi  http.pyi  integrations.pyi  interactions.pyi  invite.pyi  member.pyi  mentions.pyi  message.pyi  mixins.pyi  object.pyi  oggparse.pyi  opus.pyi  partial_emoji.pyi  (+21 more)
(+2516 files in other folders)
